--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Online-Learning-Platform
 
+server.port= 8081
+
 spring.datasource.url=jdbc:h2:mem:test
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
